<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="189dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/infoM"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:paddingRight="0dp"
                android:paddingStart="15dp"
                android:paddingTop="23dp"
                android:text="Moneda"
                android:textAlignment="viewStart"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:textStyle="bold"
                tools:layout_editor_absoluteX="74dp"
                tools:layout_editor_absoluteY="445dp" />

            <TextView
                android:id="@+id/amount"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:gravity="bottom"
                android:padding="10dp"
                android:text="@string/cero"
                android:textAlignment="textEnd"
                android:textColor="@android:color/black"
                android:textSize="30sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:layout_editor_absoluteY="34dp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/black"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="182dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/infoC"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1.5"
                android:paddingLeft="15dp"
                android:paddingRight="0dp"
                android:paddingTop="23dp"
                android:text="@string/conversor"
                android:textAlignment="viewStart"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:textStyle="bold"
                tools:layout_editor_absoluteX="74dp"
                tools:layout_editor_absoluteY="445dp"
                tools:text="Conversor" />

            <View
                android:layout_width="1dp"
                android:layout_height="205dp"
                android:background="@android:color/black" />

            <TextView
                android:id="@+id/res"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.9"
                android:paddingRight="12dp"
                android:paddingTop="19dp"
                android:text="@string/hola2"
                android:textAlignment="textEnd"
                android:textColor="@android:color/black"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:layout_editor_absoluteX="74dp"
                tools:layout_editor_absoluteY="445dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:padding="0dp">

                <Button
                    android:id="@+id/btn1"
                    style="@android:style/Widget.Material.Light.Button.Borderless"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/buttonborder"
                    android:text="@string/_1"
                    android:textSize="24sp" />

                <Button
                    android:id="@+id/btn2"
                    style="@android:style/Widget.Material.Light.Button.Borderless"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/buttonborder"
                    android:text="@string/_2"
                    android:textSize="24sp" />

                <Button
                    android:id="@+id/btn3"
                    style="@android:style/Widget.Material.Light.Button.Borderless"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/buttonborder"
                    android:text="@string/_3"
                    android:textSize="24sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn4"
                    style="@android:style/Widget.Material.Light.Button.Borderless"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/buttonborder"
                    android:text="@string/_4"
                    android:textSize="24sp"
                    tools:layout_editor_absoluteX="49dp"
                    tools:layout_editor_absoluteY="147dp" />

                <Button
                    android:id="@+id/btn5"
                    style="@android:style/Widget.Material.Light.Button.Borderless"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/buttonborder"
                    android:text="@string/_5"
                    android:textSize="24sp"
                    tools:layout_editor_absoluteX="145dp"
                    tools:layout_editor_absoluteY="160dp" />

                <Button
                    android:id="@+id/btn6"
                    style="@android:style/Widget.Material.Light.Button.Borderless"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/buttonborder"
                    android:text="@string/_6"
                    android:textSize="24sp"
                    tools:layout_editor_absoluteX="214dp"
                    tools:layout_editor_absoluteY="160dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn7"
                    style="@android:style/Widget.Material.Light.Button.Borderless"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/buttonborder"
                    android:text="@string/_7"
                    android:textSize="24sp"
                    tools:layout_editor_absoluteX="74dp"
                    tools:layout_editor_absoluteY="223dp" />

                <Button
                    android:id="@+id/btn8"
                    style="@android:style/Widget.Material.Light.Button.Borderless"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/buttonborder"
                    android:text="@string/_8"
                    android:textSize="24sp"
                    tools:layout_editor_absoluteX="145dp"
                    tools:layout_editor_absoluteY="228dp" />

                <Button
                    android:id="@+id/btn9"
                    style="@android:style/Widget.Material.Light.Button.Borderless"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/buttonborder"
                    android:text="@string/_9"
                    android:textSize="24sp"
                    tools:layout_editor_absoluteX="216dp"
                    tools:layout_editor_absoluteY="228dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn0"
                    style="@android:style/Widget.Material.Light.Button.Borderless"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/buttonborder"
                    android:text="@string/cero"
                    android:textSize="24sp"
                    tools:layout_editor_absoluteX="145dp"
                    tools:layout_editor_absoluteY="296dp" />

                <Button
                    android:id="@+id/btnPunto"
                    style="@android:style/Widget.Material.Light.Button.Borderless"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/buttonborder"
                    android:text="@string/punto"
                    android:textSize="24sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/btnC"
                    style="@android:style/Widget.Material.Light.Button.Borderless"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/buttonborder"
                    android:text="@string/c"
                    android:textSize="24sp"
                    tools:layout_editor_absoluteX="216dp"
                    tools:layout_editor_absoluteY="296dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnEur"
                    style="@style/Widget.AppCompat.Button"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/euro"
                    android:text="@string/euro"
                    android:textColor="@android:color/transparent"
                    tools:layout_editor_absoluteX="1dp"
                    tools:layout_editor_absoluteY="375dp" />

                <Button
                    android:id="@+id/btnDolar"
                    style="@style/Widget.AppCompat.Button"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/usa"
                    android:text="@string/dolar"
                    android:textColor="@android:color/transparent"
                    tools:layout_editor_absoluteX="186dp"
                    tools:layout_editor_absoluteY="374dp" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>